--- a/docker/nginx-proxy/npm-crowdsec/docker-compose.yml
+++ b/docker/nginx-proxy/npm-crowdsec/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: db_nginx_crds
     restart: always
     env_file:
-      - "/opt/data-etc/nginx/config.nginx.env"
+      - " /opt/data-etc/nginx/run.env"
     security_opt:
       - no-new-privileges:true
     labels:
@@ -46,7 +46,7 @@ services:
     security_opt:
       - no-new-privileges:true
     env_file:
-      - "/opt/data-etc/nginx/config.nginx.env"
+      - " /opt/data-etc/nginx/run.env"
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
