--- a/docker/nginx-proxy/npm-crowdsec/docker-compose.yml
+++ b/docker/nginx-proxy/npm-crowdsec/docker-compose.yml
@@ -57,9 +57,9 @@ services:
       - '443:443'
     environment:
       DB_MYSQL_HOST: "db_nginx_crds"
-      DB_MYSQL_PORT: 3306
+      DB_MYSQL_PORT: "3306"
       DB_MYSQL_USER: "${NG_USER}"
-      DB_MYSQL_PASSWORD__FILE: /run/secrets/MYSQL_PWD
+      DB_MYSQL_PASSWORD__FILE: "/run/secrets/MYSQL_PWD"
       DB_MYSQL_NAME: "${NG_DB}"
       #DISABLE_IPV6: 'true'
       DISABLE_IPV6: "1"
