--- a/docker/nginx-proxy/npm-crowdsec/docker-compose.yml
+++ b/docker/nginx-proxy/npm-crowdsec/docker-compose.yml
@@ -80,6 +80,8 @@ services:
     image: "crowdsecurity/crowdsec:latest"
     container_name: crowdsec
     expose:
+      - "8080"
+    ports:
       - "8300:8080"
     environment:
       PGID: "1000"
