--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -11,6 +11,7 @@ secrets:
 
 services:
   db_pastefy:
+    container_name: db_pastefy
     image: "linuxserver/mariadb:10.11.6"
     volumes:
       - "/opt/data-docker/pastefy/mysql:/config"
@@ -31,6 +32,7 @@ services:
     depends_on:
       - db_pastefy
     image: "interaapps/pastefy:latest"
+    container_name: pastefy
     ports:
       - "9999:80"
     environment:
