--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - MYSQL_USER
       - MYSQL_DATABASE
       - MYSQL_ROOT_PASSWORD
+    ports:
+      - "3306:3306"
   pastefy:
     depends_on:
       - db_pastefy
