--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       DATABASE_PASSWORD: ${PAST_MYSQL_PASSWORD}
       DATABASE_HOST: db_pastefy
       DATABASE_PORT: 3306
+      AUTH_PROVIDER: NONE
       SERVER_NAME: ${PAST_SERVER_URL}
       PASTEFY_LOGIN_REQUIRED: false
       PASTEFY_LOGIN_REQUIRED_CREATE: true
