--- a/docker/apps/pastefy/docker-compose.yml
+++ b/docker/apps/pastefy/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     image: "linuxserver/mariadb:10.11.6"
     volumes:
       - "/opt/data-docker/pastefy/mysql:/config"
+      - "/opt/data-docker/pastefy/backup_mysql:/var/lib/allsqldump/backup-pastefy"
     environment:
       - PUID=1000
       - PGID=1001
@@ -30,13 +31,25 @@ services:
       - MYSQL_ROOT_PASSWORD
     ports:
       - "3306:3306"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
+      #- docker-volume-backup.archive-pre=/bin/sh -c 'mysqldump --defaults-extra-file=/run/secrets/CONFIG_SQLPWD --all-databases > /var/lib/allsqldump/backup-pastefy$(date +\%Y\%m\%d).sql'
   pastefy:
     depends_on:
       - db_pastefy
+    security_opt:
+      - no-new-privileges:true
     image: "interaapps/pastefy:latest"
     container_name: pastefy
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
+      - "/etc/timezone:/etc/timezone:ro"
     ports:
       - "7810:80"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
     environment:
       HTTP_SERVER_PORT: 80
       HTTP_SERVER_CORS: "*"
@@ -54,3 +67,5 @@ services:
       PASTEFY_ENCRYPTION_DEFAULT: false
       PASTEFY_GRANT_ACCESS_REQUIRED: true
       PASTEFY_PUBLIC_STATS: false
+      OAUTH2_INTERAAPPS_CLIENT_ID: ${OAUTH2_INTERAAPPS_CLIENT_ID}
+      OAUTH2_INTERAAPPS_CLIENT_SECRET: ${OAUTH2_INTERAAPPS_CLIENT_SECRET}
