--- a/docker/apps/linkwarden/docker-compose.yml
+++ b/docker/apps/linkwarden/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - docker-volume-backup.archive-pre=/bin/bash -c 'pg_dump -U ${POSTGRES_USER} ${POSTGRES_DB} > /var/lib/postgresql/db-backups/bck_db_linkwarden$(date +%Y%m%d-%H%M).sql'
 
   linkwarden:
+    container_name: "linkwarden"
     env_file:
       - /opt/data-etc/linkwarden/config.env
     environment:
