--- a/docker/pihole/docker-compose-orbital.yml
+++ b/docker/pihole/docker-compose-orbital.yml
@@ -3,6 +3,9 @@ services:
   orbital-sync:
     image: mattwebbio/orbital-sync:latest
     container_name: orbital-sync
+    depends_on:
+      pihole:
+        condition: service_healthy
     labels:
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
     env_file:
