--- a/docker/pihole/docker-compose.yml
+++ b/docker/pihole/docker-compose.yml
@@ -24,7 +24,8 @@ services:
       - WEBPASSWORD_FILE=/run/secrets/WEB_PASSWORD_SECRET
       #- DNSSEC=true
       - DNS_BOGUS_PRIV=true
-      - PIHOLE_DNS_=172.20.0.3;9.9.9.9;149.112.112.112
+      #- PIHOLE_DNS_=172.20.0.3;9.9.9.9;149.112.112.112 -> to activate quad9dns
+      - PIHOLE_DNS_=172.20.0.3
       - VIRTUAL_HOST=${HOSTNAME}
       - DNSMASQ_LISTENING=all
     volumes:
