--- a/docker/gitea/new/docker-compose.yml
+++ b/docker/gitea/new/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 secrets:
   POSTGRES_PWD:
     file: /opt/data-etc/gitea/db_pwd.secret.txt
@@ -14,13 +12,16 @@ networks:
 
 services:
   db:
-    image: postgres:16
+    image: postgres:16.4
     container_name: db-gitea
     restart: unless-stopped
     environment:
       POSTGRES_USER_FILE: /run/secrets/POSTGRES_USER
       POSTGRES_PASSWORD_FILE: /run/secrets/POSTGRES_PWD
       POSTGRES_DB_FILE: /run/secrets/POSTGRES_DB
+      TZ: ${TIME_ZONE}
+    security_opt:
+      - no-new-privileges:true
     secrets:
       - POSTGRES_PWD
       - POSTGRES_USER
@@ -29,20 +30,26 @@ services:
       - gitea-v2-net
     volumes:
       - "/opt/data-docker/gitea/postgres:/var/lib/postgresql/data"
+      - "/opt/data-docker/gitea/postgres/db-backups:/var/lib/postgresql/db-backups"
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
+      - docker-volume-backup.archive-pre=/bin/bash -c 'pg_dump -U $(< /run/secrets/POSTGRES_USER) $(< /run/secrets/POSTGRES_DB) > /var/lib/postgresql/db-backups/bck_db_gitea$(date +%Y%m%d-%H%M).sql'
 
   gitea-server:
     image: gitea/gitea:latest
     container_name: gitea
     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     depends_on:
       - db
     env_file:
       - /opt/data-etc/gitea/config.env
     environment:
-      - USER_UID=1001
-      - USER_GID=1001
+      - USER_UID=1000
+      - USER_GID=1000
       - GITEA__database__DB_TYPE=postgres
       - GITEA__database__HOST=db-gitea:5432
       - GITEA__database__NAME=${POSTGRES_DB}
@@ -71,6 +78,8 @@ services:
     ports:
       - "8100:3000"
       - "2222:22"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
   adminer:
     image: adminer:latest
     container_name: adminer
