--- a/docker/media-stream/docker-compose.yml
+++ b/docker/media-stream/docker-compose.yml
@@ -186,6 +186,26 @@ services:
       - "8191:8191"
     networks:
       - media-net
+  jellyseerr:
+    image: ghcr.io/hotio/jellyseerr:latest
+    container_name: jellyseerr
+    restart: unless-stopped
+    labels:
+      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Montreal
+      - LOG_LEVEL=info
+    ports:
+      - "5055:5055"
+    volumes:
+      - /opt/data-docker/media_stream/jellyseerr/config:/config
+      - /nfs/stream_data/videos/movies:/data/medialibrary/movies
+      - /nfs/stream_data/videos/tvshows:/data/medialibrary/tv #optional
+      - /nfs/stream_data/downloads:/data/downloads
+    networks:
+      - media-net
 networks:
   media-net:
     external: true
