--- a/docker/apps/mailcatcher/docker-compose.yml
+++ b/docker/apps/mailcatcher/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
       - "/etc/timezone:/etc/timezone:ro"
+      - "/opt/data-docker/mailcatcher/logs:/var/mailcatcher/logs"
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
