--- a/docker/apps/wordpress/docker-compose.yml
+++ b/docker/apps/wordpress/docker-compose.yml
@@ -1,13 +1,16 @@
 services:
   db:
     # We use a mariadb image which supports both amd64 & arm64 architecture
-    image: mariadb:10.6.4-focal
+    image: mariadb:latest
     # If you really want to use MySQL, uncomment the following line
     #image: mysql:8.0.27
     command: '--default-authentication-plugin=mysql_native_password'
+    container_name: dbwordpress
     volumes:
-      - db_data:/var/lib/mysql
+      - /opt/data-docker/wordpress/db:/var/lib/mysql
     restart: always
+    env_file:
+      - /opt/data-etc/wordpress/config.env
     environment:
       - MYSQL_ROOT_PASSWORD=somewordpress
       - MYSQL_DATABASE=wordpress
