--- a/docker/apps/wordpress/docker-compose.yml
+++ b/docker/apps/wordpress/docker-compose.yml
@@ -1,36 +1,36 @@
 services:
-  db:
-    # We use a mariadb image which supports both amd64 & arm64 architecture
+  wdpressdb:
     image: mariadb:latest
-    # If you really want to use MySQL, uncomment the following line
-    #image: mysql:8.0.27
     command: '--default-authentication-plugin=mysql_native_password'
-    container_name: dbwordpress
+    container_name: wdpressdb
+    security_opt:
+      - no-new-privileges:true
     volumes:
       - /opt/data-docker/wordpress/db:/var/lib/mysql
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     restart: always
     env_file:
       - /opt/data-etc/wordpress/config.env
-    environment:
-      - MYSQL_ROOT_PASSWORD=somewordpress
-      - MYSQL_DATABASE=wordpress
-      - MYSQL_USER=wordpress
-      - MYSQL_PASSWORD=wordpress
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
     expose:
       - 3306
-      - 33060
+    ports:
+      - 3306
   wordpress:
     image: wordpress:latest
     volumes:
-      - wp_data:/var/www/html
+      - /opt/data-docker/wordpress/app:/var/www/html
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+    labels:
+      - "docker-volume-backup.stop-during-backup=true"
     ports:
       - 80:80
     restart: always
     environment:
-      - WORDPRESS_DB_HOST=db
-      - WORDPRESS_DB_USER=wordpress
-      - WORDPRESS_DB_PASSWORD=wordpress
-      - WORDPRESS_DB_NAME=wordpress
-volumes:
-  db_data:
-  wp_data:
+      - WORDPRESS_DB_HOST=wdpressdb
+      - WORDPRESS_DB_USER=${MYSQL_USER}
+      - WORDPRESS_DB_PASSWORD=${MYSQL_PASSWORD}
+      - WORDPRESS_DB_NAME=${MYSQL_DATABASE}
