--- a/docker/gitea/new/docker-compose.yml
+++ b/docker/gitea/new/docker-compose.yml
@@ -58,8 +58,8 @@ services:
       - GITEA__database__PASSWD=${POSTGRES_PASSWORD}
       - GITEA__mailer__ENABLED=true
       - GITEA__mailer__FROM=${GITEA__mailer__FROM}
-      - GITEA__mailer__PROTOCOL=smtp
-      - GITEA__mailer__TLS=false
+      - GITEA__mailer__PROTOCOL=${GITEA__mailer__PROTOCOL}
+      - GITEA__mailer__TLS=${GITEA__mailer__TLS}
       - GITEA__mailer__SMTP_ADDR=${GITEA__mailer__SMTP_ADDR}
       - GITEA__mailer__SMTP_PORT=${GITEA__mailer__SMTP_PORT}
       - GITEA__mailer__USER=${GITEA__mailer__USER}
