--- a/docker/apps/wordpress/docker-compose.yml
+++ b/docker/apps/wordpress/docker-compose.yml
@@ -22,7 +22,10 @@ services:
     image: wordpress:latest
     container_name: wordpress
     volumes:
-      - /opt/data-docker/wordpress/app:/var/www/html
+      - type: bind
+        source: /opt/data-docker/wordpress/app
+        target: /var/www/html
+        consistency: cached
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
     labels:
