--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "443:443"     # HTTPS
       - "8080:8080"   # Traefik Dashboard (optional, secure it with authentication)
     volumes:
-      - ./traefik/traefik.yml:/etc/traefik/traefik.yml:ro
-      - ./traefik/dynamic_conf.yml:/etc/traefik/dynamic_conf.yml:ro
+      - /opt/data-docker/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
+      - /opt/data-docker/traefik/dynamic_conf.yml:/etc/traefik/dynamic_conf.yml:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
       - DYNU_API_KEY=${DYNU_API_KEY}
