--- a/docker/authentik/docker-compose.yml
+++ b/docker/authentik/docker-compose.yml
@@ -1,4 +1,3 @@
----
 services:
   postgresql:
     image: docker.io/library/postgres:16-alpine
@@ -17,6 +16,9 @@ services:
       POSTGRES_PASSWORD: ${ATK_POSTGRES_PASSWORD}
       POSTGRES_USER: ${ATK_POSTGRES_USER}
       POSTGRES_DB: ${ATK_POSTGRES_DB}
+    networks:
+      - backend-network
+
   redis:
     image: docker.io/library/redis:alpine
     command: --save 60 1 --loglevel warning
@@ -34,43 +36,22 @@ services:
     labels:
       - "docker-volume-backup.stop-during-backup=true"
       - "com.centurylinklabs.watchtower.scope=toUpdateScope"
+    networks:
+      - backend-network
+
   server:
     image: ghcr.io/goauthentik/server:2024.12
     restart: unless-stopped
     command: server
+    container_name: authentik-proxy
     environment:
-      AUTHENTIK_REDIS__HOST: redis
-      AUTHENTIK_POSTGRESQL__HOST: postgresql
-      AUTHENTIK_POSTGRESQL__USER: ${ATK_POSTGRES_USER}
-      AUTHENTIK_POSTGRESQL__NAME: ${ATK_POSTGRES_DB}
-      AUTHENTIK_POSTGRESQL__PASSWORD: ${ATK_POSTGRES_PASSWORD}
-    volumes:
-      - /opt/data-docker/authentik/app/media:/media
-      - /opt/data-docker/authentik/app/custom-templates:/templates
-      - "/etc/timezone:/etc/timezone:ro"
-      - "/etc/localtime:/etc/localtime:ro"
-    ports:
-      - "9000:9000"
-      - "9443:9443"
-    labels:
-      - "docker-volume-backup.stop-during-backup=true"
-      - "com.centurylinklabs.watchtower.scope=toUpdateScope"
-    depends_on:
-      postgresql:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-  worker:
-    image: ghcr.io/goauthentik/server:2024.12
-    restart: unless-stopped
-    command: worker
-    environment:
+      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY}
       AUTHENTIK_REDIS__HOST: redis
       AUTHENTIK_EMAIL__HOST: ${ATK_SMTP_HOST}
       AUTHENTIK_EMAIL__PORT: ${ATK_SMTP_PORT}
       AUTHENTIK_EMAIL__USERNAME: ${ATK_SMTP_USER}
       AUTHENTIK_EMAIL__PASSWORD: ${ATK_SMTP_PASSWORD}
-      AUTHENTIK_EMAIL__USE_TLS: ${ATK_SMTP_USE_TLS} # Use StartTLS
+      AUTHENTIK_EMAIL__USE_TLS: ${ATK_SMTP_USE_TLS}
       AUTHENTIK_EMAIL__FROM: ${ATK_SMTP_FROM}
       AUTHENTIK_EMAIL__USE_SSL: false
       AUTHENTIK_EMAIL__TIMEOUT: 10
@@ -78,12 +59,51 @@ services:
       AUTHENTIK_POSTGRESQL__USER: ${ATK_POSTGRES_USER}
       AUTHENTIK_POSTGRESQL__NAME: ${ATK_POSTGRES_DB}
       AUTHENTIK_POSTGRESQL__PASSWORD: ${ATK_POSTGRES_PASSWORD}
-    # `user: root` and the docker socket volume are optional.
-    # See more for the docker socket integration here:
-    # https://goauthentik.io/docs/outposts/integrations/docker
-    # Removing `user: root` also prevents the worker from fixing the permissions
-    # on the mounted folders, so when removing this make sure the folders have the correct UID/GID
-    # (1000:1000 by default)
+      AUTHENTIK_ERROR_REPORTING__ENABLED: true
+    volumes:
+      - /opt/data-docker/authentik/app/media:/media
+      - /opt/data-docker/authentik/app/custom-templates:/templates
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.authentik.entryPoints=websecure"
+      - "traefik.http.routers.authentik.rule=Host(`auth.ui24.theworkpc.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
+      - "traefik.http.routers.authentik.tls=true"
+      - "traefik.http.routers.authentik.tls.certresolver=dynu-resolver"
+      - "traefik.http.services.authentik.loadbalancer.server.url=http://authentik-proxy:9000"
+      - "traefik.http.middlewares.authentik.forwardauth.address=http://authentik-proxy:9000/outpost.goauthentik.io/auth/traefik"
+      - "traefik.http.middlewares.authentik.forwardauth.trustForwardHeader=true"
+      - "traefik.http.middlewares.authentik.forwardauth.authResponseHeaders=X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid,X-authentik-jwt,X-authentik-meta-jwks,X-authentik-meta-outpost,X-authentik-meta-provider,X-authentik-meta-app,X-authentik-meta-version"
+    depends_on:
+      postgresql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - frontend-network
+      - backend-network
+
+  worker:
+    image: ghcr.io/goauthentik/server:2024.12
+    restart: unless-stopped
+    command: worker
+    environment:
+      AUTHENTIK_SECRET_KEY: ${AUTHENTIK_SECRET_KEY}
+      AUTHENTIK_REDIS__HOST: redis
+      AUTHENTIK_EMAIL__HOST: ${ATK_SMTP_HOST}
+      AUTHENTIK_EMAIL__PORT: ${ATK_SMTP_PORT}
+      AUTHENTIK_EMAIL__USERNAME: ${ATK_SMTP_USER}
+      AUTHENTIK_EMAIL__PASSWORD: ${ATK_SMTP_PASSWORD}
+      AUTHENTIK_EMAIL__USE_TLS: ${ATK_SMTP_USE_TLS}
+      AUTHENTIK_EMAIL__FROM: ${ATK_SMTP_FROM}
+      AUTHENTIK_EMAIL__USE_SSL: false
+      AUTHENTIK_EMAIL__TIMEOUT: 10
+      AUTHENTIK_POSTGRESQL__HOST: postgresql
+      AUTHENTIK_POSTGRESQL__USER: ${ATK_POSTGRES_USER}
+      AUTHENTIK_POSTGRESQL__NAME: ${ATK_POSTGRES_DB}
+      AUTHENTIK_POSTGRESQL__PASSWORD: ${ATK_POSTGRES_PASSWORD}
+      AUTHENTIK_ERROR_REPORTING__ENABLED: true
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -102,3 +122,13 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    networks:
+      - frontend-network
+
+networks:
+  frontend-network:
+    driver: bridge
+    external: true
+  backend-network:
+    driver: bridge
+    external: true
