--- a/docker/authentik/docker-compose.yml
+++ b/docker/authentik/docker-compose.yml
@@ -122,6 +122,7 @@ services:
         condition: service_healthy
     networks:
       - frontend-network
+      - backend-network
 
 networks:
   frontend-network:
