--- a/docker/authentik/docker-compose.yml
+++ b/docker/authentik/docker-compose.yml
@@ -67,11 +67,13 @@ services:
       - "/etc/localtime:/etc/localtime:ro"
     labels:
       - "traefik.enable=true"
+      - "traefik.http.routers.authentik.rule=Host(`auth.ui24.theworkpc.com`)"
+      - "traefik.http.services.authentik.loadbalancer.server.port=9000"
       - "traefik.http.routers.authentik.entryPoints=websecure"
-      - "traefik.http.routers.authentik.rule=Host(`auth.ui24.theworkpc.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
       - "traefik.http.routers.authentik.tls=true"
       - "traefik.http.routers.authentik.tls.certresolver=dynu-resolver"
-      - "traefik.http.services.authentik.loadbalancer.server.url=http://authentik-proxy:9000"
+      #- "traefik.http.services.authentik.loadbalancer.server.url=http://authentik-proxy:9000"
+      - "traefik.http.services.authentik.loadbalancer.server.port=9000"
       - "traefik.http.middlewares.authentik.forwardauth.address=http://authentik-proxy:9000/outpost.goauthentik.io/auth/traefik"
       - "traefik.http.middlewares.authentik.forwardauth.trustForwardHeader=true"
       - "traefik.http.middlewares.authentik.forwardauth.authResponseHeaders=X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid,X-authentik-jwt,X-authentik-meta-jwks,X-authentik-meta-outpost,X-authentik-meta-provider,X-authentik-meta-app,X-authentik-meta-version"
